# CycleStrong

./: .env.example  .gitignore  App.tsx  README.md  app.json  babel.config.js  docker-compose.yml  package.json  tsconfig.json
apps/backend/: .env.example  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/v1/: api.py
apps/backend/app/api/v1/routes/: rules.py
apps/backend/app/core/: config.py
apps/backend/app/db/: session.py
apps/backend/app/schemas/: rules.py
apps/backend/app/services/: rule_engine.py
apps/mobile/: .eslintrc.json  App.tsx  app.json  package.json  tsconfig.json
apps/mobile/src/db/: sqlite.ts  workouts.ts
apps/mobile/src/screens/Home/: HomeScreen.tsx
apps/mobile/src/screens/Workout/: DevWorkoutScreen.tsx
apps/mobile/src/services/: api.ts
apps/mobile/src/types/: training.ts
src/: theme.ts
src/components/: Card.tsx  TabBar.tsx
src/db/: sqlite.ts
src/planner/: localPlanner.ts
src/screens/: CycleScreen.tsx  PreviousScreen.tsx  WhyScreen.tsx  WorkoutScreen.tsx
src/state/: AppState.tsx
src/types/: domain.ts
src/why/: whyGenerator.ts
